2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Packaging fixes.

	* tools/lib/Makefile.am,
	* tools/lib/mtalpha.mk: Adjust file paths after recent changes.

	* build-aux/slc.m4,
	* build-aux/slcvars.mk: Make the tools aware of the new Python
	library via `PYTHONPATH'.

2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Remove targets `ppp' and `ppp2'. Keep `spp' as transition target.

	* tools/lib/t-ppp2alpha/slimpl.m4,
	* tools/lib/t-ppp2alpha/include/sl_support.h: Rename to...

	* tools/lib/t-sppalpha/slimpl.m4,
	* tools/lib/t-sppalpha/include/sl_support.h: ... here.

	* tools/bin/cce.in: Remove references to `ppp' and
	`ppp2'. Introduce `spp' instead.

	* tools/bin/spp: Update accordingly.

	* tools/lib/mtalpha-sim/slrt.s: Use the short alias `mtalpha' for the
	slr data tag, to allow future adaptation.

2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Migrate `spp' to the new framework.

	* tools/bin/spp: Use the new framework.
	* tools/lib/slc/mtalpha/spp.py: Remove, obsoleted by `spp'.

	* tools/lib/t-ppp2alpha/slimpl.m4: Adjust parameter declarations
	for the new syntax required by `spp'.

2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor API improvement.

	* tools/lib/slc/msg.py: Allow to use `warn' and `log' without context. 

2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Merge CM4 into new framework.

	* tools/bin/cm4.in: Copy functionality to...
	* tools/lib/slc/input/cm4.py: ... here.

	* tools/bin/cm4.in: Handle parameters `-P' and `-fcm4-trace'.
	* tools/bin/slc.in: Use the new parameters.

2010-05-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Move forward with the new code transformation framework.

	* tools/lib/slc/ast.py: Introduce nodes for C types, typedefs and
	typedef uses.

	* tools/lib/slc/visitors.py: Introduce default visits for the new
	nodes.

	* tools/lib/slc/lower/lowccast.py,
	* tools/lib/slc/lower/lowcvars.py,
	* tools/lib/slc/lower/rename.py: Adapt to use the new type nodes.

	* tools/lib/slc/lower/seq.py,